--- a/templates/productdb/home.html
+++ b/templates/productdb/home.html
@@ -39,6 +39,7 @@
                         </form>
                     </span>
                 </div>
+                <!-- Disabled for CAI-46
                 <div class="col-md-12" style="margin-bottom: 15px">
                     <div class="text-center">
                         <a class="btn btn-default btn-sm" role="button" href="{% url 'productdb:list-product_lists' %}" id="product_list_link">
@@ -55,6 +56,7 @@
                         </a>
                     </div>
                 </div>
+                -->
                 <div class="col-md-12">
                     {% if TB_HOMEPAGE_TEXT_AFTER_FAVORITE_ACTIONS %}
                         <div>
