[CAI-50] Change the text at the top to say “On this page, you can execute a bulk Product check of multiple Products and Manufacturers against the database. Please enter a list of Product IDs in the following text field separated by line breaks, e.g.”

--- a/templates/productdb/product_check/create-product_check.html
+++ b/templates/productdb/product_check/create-product_check.html
@@ -15,9 +15,9 @@ Create Product Check
         {% bootstrap_messages %}
 
         {% if worker_is_active %}
-            <p>On this page, you can execute a bulk Product check of multiple Products against the local
-            database. Please enter a list of Product IDs in the following text field separated
-            by line breaks, e.g.</p>
+            <p>On this page, you can execute a bulk Product check of multiple Products and Manufacturers
+            against the database. Please enter a list of Product IDs in the following text field
+            separated by line breaks, e.g.</p>
                 <pre style="font-size: x-small">
 WS-C2960-48TT-L
 WS-C2950-24
