[CAI-48] The text under “All Products” Banner is removed, like requested in the picture above.

--- a/templates/productdb/browse/view_products_by_vendor.html
+++ b/templates/productdb/browse/view_products_by_vendor.html
@@ -17,11 +17,13 @@
     {% bootstrap_messages %}
 
     {% if vendors|length > 0 %}
+        <!-- Commented for CAI-48
         <p>
             On this page, you can view the products for a specific vendor that are stored in the database.
             <a href="javascript:browse_database_by_vendor_help()"><i class="fa fa-info-circle"></i> Click here</a> to get a quick introduction.
             You can also search within the <a href="{% url 'productdb:all_products' %}"><i class="fa fa-search"></i>&nbsp;entire database</a>.
         </p>
+        -->
         {% include "productdb/_components/search_function_info_with_config_link.html" %}
         <div style="text-align: center;">
             <form class="form form-inline" method="post" id="select_vendor_form">
