[CAI-48] Remove the “Show additional columns” option/button

--- a/templates/productdb/browse/view_products_by_vendor.html
+++ b/templates/productdb/browse/view_products_by_vendor.html
@@ -350,10 +350,12 @@
                             orthogonal: "export"
                         }
                     },
+                    /* Commented for CAI-48
                     {
                         extend: "colvis",
                         text: 'show additional columns <i class="fa fa-angle-down"></i>'
                     }
+                    */
                 ],
                 "ajax": "{% url 'productdb:datatables_vendor_products_view' %}" + vs.val() + "/"
             });
