[CAI-48] "CDW Business Service" is actually "Internal Product ID"

--- a/templates/productdb/browse/view_products_by_vendor.html
+++ b/templates/productdb/browse/view_products_by_vendor.html
@@ -308,7 +308,7 @@
                     {
                         "targets": 16,
                         "data": "internal_product_id",
-                        "visible": false,
+                        "visible": true,
                         "searchable": false,
                         "sortable": false
                     }
