[CAI-47] Remove the “Show additional columns” option/button

--- a/templates/productdb/browse/view_products.html
+++ b/templates/productdb/browse/view_products.html
@@ -319,11 +319,13 @@
                             orthogonal: "export"
                         }
                     },
+                    /* Commented for CAI-47
                     {
                         extend: "colvis",
                         id: "tour_show_columns",
                         text: 'show additional columns <i class="fa fa-angle-down"></i>'
                     }
+                    */
                 ],
                 "ajax": "{% url 'productdb:datatables_list_products_view' %}"
             });
