[CAI-47] Match the columns with the columns in this picture

--- a/templates/productdb/browse/view_products.html
+++ b/templates/productdb/browse/view_products.html
@@ -183,14 +183,14 @@
                     {
                         "targets": 7,
                         "data": "eol_ext_announcement_date",
-                        "visible": false,
+                        "visible": true,
                         "searchable": false,
                         "sortable": false
                     },
                     {
                         "targets": 8,
                         "data": "end_of_sale_date",
-                        "visible": false,
+                        "visible": true,
                         "searchable": false,
                         "sortable": false
                     },
@@ -204,35 +204,35 @@
                     {
                         "targets": 10,
                         "data": "end_of_sw_maintenance_date",
-                        "visible": false,
+                        "visible": true,
                         "searchable": false,
                         "sortable": false
                     },
                     {
                         "targets": 11,
                         "data": "end_of_routine_failure_analysis",
-                        "visible": false,
+                        "visible": true,
                         "searchable": false,
                         "sortable": false
                     },
                     {
                         "targets": 12,
                         "data": "end_of_service_contract_renewal",
-                        "visible": false,
+                        "visible": true,
                         "searchable": false,
                         "sortable": false
                     },
                     {
                         "targets": 13,
                         "data": "end_of_sec_vuln_supp_date",
-                        "visible": false,
+                        "visible": true,
                         "searchable": false,
                         "sortable": false
                     },
                     {
                         "targets": 14,
                         "data": "end_of_support_date",
-                        "visible": false,
+                        "visible": true,
                         "searchable": false,
                         "sortable": false
                     },
@@ -255,7 +255,7 @@
                                 return ""
                             }
                         },
-                        "visible": false,
+                        "visible": true,
                         "searchable": false,
                         "sortable": false
                     },
@@ -277,7 +277,7 @@
                     {
                         "targets": 17,
                         "data": "internal_product_id",
-                        "visible": false,
+                        "visible": true,
                         "searchable": false,
                         "sortable": false
                     }
