[CAI-49] The text under “All Product Checks are deleted every week on Sunday.” is removed, like requested in the picture above.

--- a/templates/productdb/product_check/detail-product_check.html
+++ b/templates/productdb/product_check/detail-product_check.html
@@ -22,7 +22,8 @@
         </h1>
     </div>
 
-    {% bootstrap_alert content="All Product Checks are deleted every week on Sunday." alert_type="warning" %}
+    {# Commented for CAI-49 #}
+    {# {% bootstrap_alert content="All Product Checks are deleted every week on Sunday." alert_type="warning" %} #}
     {% bootstrap_messages %}
 
     <div class="col-md-12">
