[CAI-49] Remove the “Show additional columns” option/button

--- a/templates/productdb/product_check/detail-product_check.html
+++ b/templates/productdb/product_check/detail-product_check.html
@@ -300,10 +300,12 @@
                             orthogonal: "export"
                         }
                     },
+                    /* Commented for CAI-49
                     {
                         extend: "colvis",
                         text: 'show additional columns <i class="fa fa-angle-down"></i>'
                     }
+                    */
                 ]
             });
 
